--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <button id="testButton">Check</button>
 
     <p>Click the button to check how many ad domains are blocked for you.</p>
+
+    <footer style="text-align: center; margin-top: 30px; font-size: 14px; color: #555;">
+      🔗 <a href="https://github.com/ilalutovinov/Barrier-AdBlocker-Test-" target="_blank" style="color: #007acc; text-decoration: none;">
+        View on GitHub
+      </a>
+    </footer>
   
   <script src="script.js"></script>
 </body>
