--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <p>Click the button to check how many ad domains are blocked for you.</p>
 
+    <div id="not-blocked-list" style="margin-top: 30px; text-align: center; display: none;">
+      <h3 style="color: #ef4444;">🚫 Not Blocked Domains</h3>
+      <ul id="domain-list" style="list-style: none; padding: 0; color: #ef4444;"></ul>
+    </div>
+
     <footer style="text-align: center; margin-top: 30px; font-size: 14px; color: #555;">
       🔗 <a href="https://github.com/ilalutovinov/Barrier-AdBlocker-Test-" target="_blank" style="color: #007acc; text-decoration: none;">
         View on GitHub
